Implement GPU point cloud renderer, Valentin's plugin. Doesn't package yet.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,4 +121,5 @@ r.LightPropagationVolume=False
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ExampleLevel.ExampleLevel
 GameDefaultMap=/Game/ExampleLevel.ExampleLevel
+GlobalDefaultGameMode=/Game/Blueprints/GameMode.GameMode_C
 
